Enforce validation with unified error message
