# swagger/api.yaml
@@ -10,7 +10,7 @@ info:
     name: Apache 2.0
     url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 host: 'localhost:8080'
-basePath: /v1
+basePath: /api/v1
 tags:
   - name: auth
     description: Authorization
@@ -43,8 +43,15 @@ paths:
           schema:
             $ref: '#/definitions/BasicCredential'
       responses:
-        default:
+        '200':
           description: successful operation
+          schema:
+            $ref: '#/definitions/LoginResponse'
+        '400':
+          description: invalid login request
+          schema:
+            $ref: '#/definitions/ApiResponse'
+
   /auth/logout:
     post:
       tags:
@@ -298,6 +305,13 @@ definitions:
         type: string
     xml:
       name: Category
+
+  LoginResponse:
+    type: object
+    properties:
+      accessToken:
+        type: string
+
   ApiResponse:
     type: object
     properties:
@@ -308,6 +322,10 @@ definitions:
         type: string
       message:
         type: string
+      errors:
+        type: array
+        items:
+          type: string
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
